# blogging_app

./: README.md  package.json
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/config/: db.js  upstash.js
backend/src/controllers/: authController.js  commentController.js  postController.js  posts.js  uploadController.js  userController.js
backend/src/middleware/: auth.js
backend/src/middlewares/: authMiddleware.js  rateLimiter.js
backend/src/models/: Comment.js  Post.js  User.js  Users.js
backend/src/routes/: authRoute.js  commentRoutes.js  postRoutes.js  posts.js  userRoutes.js
backend/src/utils/: multer.js
blog_writer_crewai/: README.md  pyproject.toml  report.md
blog_writer_crewai/src/blog_writer_crewai/: crew.py  main.py
blog_writer_crewai/src/blog_writer_crewai/config/: agents.yaml  tasks.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/Context/: AuthContext.jsx
frontend/src/components/: BlogCard.jsx  BlogFeed.jsx  Dashboard.jsx  FloatingBot.jsx  Footer.jsx  Navbar.jsx  Sidebar.jsx  SinglePost.jsx  Tabs.jsx
frontend/src/data/: postData.js
frontend/src/pages/: Home.jsx  LoginPage.jsx  ProfilePage.jsx  ResetPasswordPage.jsx  SettingsPage.jsx  SignupPage.jsx
latest_ai_development/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt
latest_ai_development/src/latest_ai_development/: api.py  ingestion.py
latest_ai_development/vector_db/: chroma.sqlite3
