[project]
name = "blog_writer_crewai"
version = "0.1.0"
description = "blog_writer_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
blog_writer_crewai = "blog_writer_crewai.main:run"
run_crew = "blog_writer_crewai.main:run"
train = "blog_writer_crewai.main:train"
replay = "blog_writer_crewai.main:replay"
test = "blog_writer_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
